--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ header {
 }
 
 .chamada {
-    background: rgb(184, 156, 213);
+    background: #89faf6;
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
